# learn_agentic_ai

./: .gitignore  ReadMe.md
01_uv/testing_uv/: README.md  pyproject.toml
02_openrouter/open_ai_agent_sdk/: main.ipynb  pyproject.toml
03_liteLLM_openai_agent/01_litellm/: main.py  pyproject.toml
04_hello_agent/: Readme.md
04_hello_agent/agent_level/: README.md  (+2 more)
05_chainlit/: README.md  pyproject.toml
06_chatbot/: main.py  pyproject.toml
07_streaming/: advance.py  main.py  pyproject.toml
08_tools/: README.md  advance.py  customFunctionTool.py  errorHandlingInTools.py  main.py  my_config.py  pyproject.toml  tool_use_behaviour.py
09_agents_as_tools/: agent_as_tool_advance.py  main.py  pyproject.toml
10_context/: .env  README.md  agent_context.py  dynamic_instructions_context.py  local_context.py  pyproject.toml
11_handoffs/: mastery_handoffs.py  pyproject.toml  simple_handoffs.py
12_structured_output/: .env  README.md  advance.py  main.py  pyproject.toml  tool.py
13_guardrails/: README.md  advance.py  main.py  pyproject.toml
14_sessions/: advance.py  main.py  pyproject.toml
15_agent_cloning/: main.py  pyproject.toml
15_hooks/: agent_hooks.py  pyproject.toml  run_hooks.py
16_ModelSettings/: README.md  advance.py  expert.py  main.py  pyproject.toml
17_tracing/: main.py  pyproject.toml
18_orchestrating_multiple_agents/: 1.deterministic.py  my_config.py  pyproject.toml
19_Agent_Runner/: CustomRunner.py  advance.py  main.py  my_config.py  pyproject.toml
markdown/: app.js  markdownToHtml.html  readme.md
prompt_engineering/: readme.md
(+13 files in other folders)
