[project]
name = "open-ai-agent-sdk"
version = "0.1.0"
description = "my first ai agent with open ai agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "nest-asyncio>=1.6.0",
    "openai-agents>=0.0.16",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
